chore: fix font setup and ensure proper Inter font integration

--- a/SpunPuzzleGame/Info.plist
+++ b/SpunPuzzleGame/Info.plist
@@ -4,24 +4,24 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Resources/Inter/Black</string>
-		<string>Resources/Inter/BlackItalic</string>
-		<string>Resources/Inter/Bold</string>
-		<string>Resources/Inter/BoldItalic</string>
-		<string>Resources/Inter/ExtraBold</string>
-		<string>Resources/Inter/ExtraBoldItalic</string>
-		<string>Resources/Inter/ExtraLight</string>
-		<string>Resources/Inter/ExtraLightItalic</string>
-		<string>Resources/Inter/Italic</string>
-		<string>Resources/Inter/Light</string>
-		<string>Resources/Inter/LightItalic</string>
-		<string>Resources/Inter/Medium</string>
-		<string>Resources/Inter/MediumItalic</string>
-		<string>Resources/Inter/Regular</string>
-		<string>Resources/Inter/SemiBold</string>
-		<string>Resources/Inter/SemiBoldItalic</string>
-		<string>Resources/Inter/Thin</string>
-		<string>Resources/Inter/ThinItalic</string>
+		<string>Black.ttf</string>
+		<string>BlackItalic.ttf</string>
+		<string>Bold.ttf</string>
+		<string>BoldItalic.ttf</string>
+		<string>ExtraBold.ttf</string>
+		<string>ExtraBoldItalic.ttf</string>
+		<string>ExtraLight.ttf</string>
+		<string>ExtraLightItalic.ttf</string>
+		<string>Italic.ttf</string>
+		<string>Light.ttf</string>
+		<string>LightItalic.ttf</string>
+		<string>Medium.ttf</string>
+		<string>MediumItalic.ttf</string>
+		<string>Regular.ttf</string>
+		<string>SemiBold.ttf</string>
+		<string>SemiBoldItalic.ttf</string>
+		<string>Thin.ttf</string>
+		<string>ThinItalic.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
