--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.mov filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+SpunPuzzleGame/Resources/Videos/*.mov filter=lfs diff=lfs merge=lfs -text
